change jpg file

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="http://imgur.com/a/PjHoV" alt="" /></span>
+							<span class="avatar"><img src="https://s15.postimg.org/4ow2jcwob/IMG_2981.jpg" alt="" /></span>
 							<h1>PHUONG PHAM</h1>
 							<p>PRODUCT MANAGER</p>
 						</header>
