--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="https://s11.postimg.org/3qrnh3wxv/IMG_3328.jpg" alt="" /></span>
+							<span class="avatar"><img src="https://s22.postimg.org/7delvxj0h/IMG_3358.jpg" alt="" /></span>
 							<h1>PHUONG PHAM</h1>
 							<p>PRODUCT MANAGER</p>
 						</header>
