--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/phuongpham178" class="fa-linkedin">LinkedIn</a></li>
 								<li><a href="https://instagram.com/phuongpurin/" class="fa-instagram">Instagram</a></li>
-								<li><a href="https://www.facebook.com/mphuong.pham" class="fa-facebook">Facebook</a></li>
+								<li><a href="https://www.facebook.com/phuongpurin" class="fa-facebook">Facebook</a></li>
 							</ul>
 						</footer>
 					</section>
